# glow

./: .gitignore  0.00.00.691719280-gst-launch.NULL_READY.dot  0.00.00.698476309-gst-launch.READY_PAUSED.dot  0.00.01.520120823-gst-launch.PAUSED_PLAYING.dot  0.00.05.628908802-gst-launch.error.dot  0.00.05.771538216-gst-launch.PLAYING_PAUSED.dot  0.00.05.810815082-gst-launch.PAUSED_READY.dot  LICENSE  README.md  check_db.py  hailo_pyqt6_gui.py  hef_path.txt  main.py  pyproject.toml  requirements_fix_sigsegv.txt  web_scraping.ipynb  로션.json  립메이크업.json  베이스메이크업.json  에센스.json  토너.json
backend/: ai_thread.py  database.py  llm.py  main.py  personal_color_core.py  personal_color_core_raw.py  simple_cls.cpp  stt.py  voice_thread.py
data/: 미스트.json  아이메이크업.json  크림.json
frontend/: dashboard.py  login.py  main_window.py  mirror.py  personal_color.py  personal_color_raw.py  report.py  signup_dialog.py  ui.py
hailo_apps/hailo_app_python/apps/detection_simple/: cls_resnet.py  cls_resnet_pipeline.py  cls_yolo8.py  cls_yolo_pipeline.py  detection_pipeline_simple.py  detection_simple.py
hailo_apps/hailo_app_python/apps/face_recognition/: face_recognition_pipeline.py
hailo_apps/hailo_app_python/core/cpp_postprocess/cpp/: all_detections_cropper.cpp
hailo_apps/hailo_app_python/core/gstreamer/: gstreamer_app.py
llm/: llm.py  main.py  stt.py
sensors/: manager.py
skin_post/: CMakeLists.txt  skin_regression.cpp  skin_resnet.cpp  skin_util.cpp  skin_util.hpp  skin_yolo_cls.cpp
wys/: main.py
wys/backend/: ai_thread.py  database.py  personal_color_core.py
wys/frontend/: dashboard.py  main_window.py  personal_color.py  report.py  styles.py  welcome.py
wys/sensors/: manager1.py  test_manager.py
