[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hailo-apps"
version = "25.10.0"
description = "Hailo AI applications and pipelines package"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Hailo"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "setproctitle",
    "opencv-python",
    "python-dotenv",
    "pyyaml",
    "lancedb",
    "Pillow",
    "ruff>=0.5.7",
    "pre-commit>=3.7.0"
]

[project.scripts]
hailo-post-install =        "hailo_apps.hailo_app_python.core.installation.post_install:main"
hailo-compile-postprocess = "hailo_apps.hailo_app_python.core.installation.compile_cpp:main"
hailo-set-env =             "hailo_apps.hailo_app_python.core.installation.set_env:main"
hailo-download-resources =  "hailo_apps.hailo_app_python.core.installation.download_resources:main"
hailo-detect =              "hailo_apps.hailo_app_python.apps.detection.detection:main"
hailo-depth =               "hailo_apps.hailo_app_python.apps.depth.depth:main"
hailo-pose =                "hailo_apps.hailo_app_python.apps.pose_estimation.pose_estimation:main"
hailo-seg =                 "hailo_apps.hailo_app_python.apps.instance_segmentation.instance_segmentation:main"
hailo-detect-simple =       "hailo_apps.hailo_app_python.apps.detection_simple.detection_simple:main"
hailo-face-recon =          "hailo_apps.hailo_app_python.apps.face_recognition.face_recognition:main"
hailo-tiling =              "hailo_apps.hailo_app_python.apps.tiling.tiling:main"
hailo-multisource =         "hailo_apps.hailo_app_python.apps.multisource.multisource:main"
hailo-reid =                "hailo_apps.hailo_app_python.apps.reid_multisource.reid_multisource:main"
hailo-resnet =              "hailo_apps.hailo_app_python.apps.detection_simple.cls_resnet:main"

[tool.setuptools.packages.find]
include = ["hailo_apps*"]

[tool.setuptools.package-data]
"hailo_apps.hailo_app_python.core.cpp_postprocess" = [
    "meson.build",
    "compile_postprocess.sh",
    "cpp/**/*",
]
"hailo_apps" = [
    "config/*.yaml",
]

[tool.ruff]
target-version = "py310"
line-length = 100

# Optional: keep Ruff off non-Python/third-party dirs
exclude = [
  ".git", ".hg", ".mypy_cache", ".ruff_cache", ".venv", "venv", "build", "dist",
  "__pycache__", "site-packages",
  "hailo_apps/**/resources/**",
  "hailo_apps/**/cpp/**",
]

[tool.ruff.format]
indent-style = "space"
quote-style  = "double"
line-ending  = "lf"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # import sorting
  "B",   # bugbear
  "UP",  # pyupgrade
  "C4",  # comprehensions
  "W",   # pycodestyle warnings
  "RUF", # ruff-specific rules
]
ignore = [
  "E402",  # allow gi.require_version before imports
  "F403",  # star import used
  "F405",  # star import names undefined
  "E501",  # line length handled by formatter
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party  = ["hailo_apps"]

# Example (use later if you want targeted ignores instead of global E402/F403/F405):
# [tool.ruff.lint.per-file-ignores]
# "hailo_apps/**/gstreamer/*.py" = ["E402"]
# "**/__init__.py"               = ["F401"]
